<resources>
    <string name="app_name">KotlinCircle</string>
    <string name="input">Input</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="sizeX">Size X</string>
    <string name="sizeY">Size Y</string>
    <string name="radius">Radius</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="OK">OK</string>
</resources>